# guildhub

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  tests.yml
src/: configuration.rs  main.rs
src/libs/: health_checker.rs  migration.rs  mod.rs  serialization.rs  utils.rs  validator.rs
src/libs/actix/: form_extractor.rs  mod.rs
src/libs/axum/: form.rs
src/libs/gitlab_api/: gitlab_api.rs  mod.rs
src/libs/htmx/: location.rs  mod.rs
src/libs/mongo/: database.rs  mod.rs
src/libs/mongo/in-memory-mongo/: in-memory-mongo.js  package-lock.json  package.json
src/modules/: mod.rs
src/modules/app/: app.rs  auth_middleware.rs  controller.rs  errors.rs  events.rs  mod.rs  user_extractor.rs
src/modules/app/middlewares/: mod.rs  optional_auth.rs  require_auth.rs
src/modules/auth/: auth.rs
src/modules/gitlab/: gitlab_service.rs  mod.rs
src/modules/guild/: controller.rs  mod.rs  service.rs  types.rs
src/modules/topic/: constants.rs  controller.rs  mod.rs  service.rs  types.rs
static/: main.css  reset.css
static/js/: sortable.js  sse.js  toast.js
templates/: authenticated-base.html  base.html
templates/components/: logo.html  menu.html
templates/components/guild/: guild-form.html  guild-list-items.html  guild-overview.html
templates/components/topic/: topic-form.html  topic-list-item.html  topics-list.html
templates/pages/: internal_server_error.html  login.html  not_found.html
templates/pages/guild/: create-guild.html  edit-guild.html  guild.html  guilds.html
templates/pages/topic/: create-topic.html  edit-topic.html
(+7 files in other folders)
