[package]
name = "guildhub"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_qs = "0.13.0"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_with = "3.8.1"
mongodb = "2.6"
bson = { version = "2", features = ["chrono-0_4"] }
derive_more = "0.99.17"
serde_json = "1.0.99"
dotenv = "*"
anyhow = "1.0.83"
reqwest = { version = "0.12.5", features = ["json"] }
chrono = "0.4.38"
url = "2.5.1"
moka = { version = "0.12.7", features = ["future"] }
async-trait = "0.1.80"
futures = "0.3.30"
askama = "0.12.1"
oauth2 = "4.4.2"
jsonwebtoken = "9.3.0"
futures-util = "0.3.30"
validator = { version = "0.18.1", features = ["derive"] }
once_cell = "1.19.0"
regex = "1.10.5"
mime = "0.3.17"
tokio-stream = "0.1.15"
askama_axum = "0.4.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
axum = "0.7.5"
headers = "0.4.0"
axum-extra = { version = "0.9.3", features = ["typed-header", "cookie"] }
cookie = "0.18.1"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",              
    "fast-rng",
    "macro-diagnostics",
]
